tests/fixtures/invalid/pow_list_list.py
# Cannot call pow() with List[int], List[int]
x = pow([1, 2, 3], [1, 2, 3])
